fixed: alignment for about.html on smaller screens

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,9 +21,11 @@ h2,
 h3 {
   margin: 0;
   font-weight: 400;
+  width: auto;
+  max-width: 100%;
 
   &.lg-heading {
-    font-size: 4rem;
+    font-size: 3.5rem;
   }
 
   &.sm-heading {
@@ -72,16 +74,17 @@ main {
   &#welcome-section {
     overflow: none;
     h1 {
-      margin-top: 15vh;
+      margin-top: 20vh;
     }
   }
 }
 
 .about-info {
+  text-align: center;
   display: grid;
   grid-gap: 25px;
   grid-template-areas:
-    "bio-image bio bio bio"
+    "bioimage bio bio bio"
     "job1 job2 job3 job4";
 
   grid-template-columns: repeat(4, 1fr);
@@ -89,17 +92,18 @@ main {
   .bio-image {
     background: url(../img/portrait-small.jpg);
     background-size: cover;
-    grid-area: bio-image;
+    grid-area: bioimage;
     margin: auto;
     border-radius: 50%;
     border: 2px solid $secondary-color;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    max-width: 100%;
+    height: 200px;
   }
 
   .bio {
     grid-area: bio;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .job1 {
@@ -237,7 +241,7 @@ main {
 #main-footer {
   text-align: center;
   padding: 1rem;
-  background: darken($primary-color, 10);
+  background: darken($primary-color, 20);
   height: 60px;
 }
 
